objects/Activity.object
<CustomObject>
    <fields>
        <fullName>GoogleEventId__c</fullName>
        <externalId>true</externalId>
        <label>GoogleEventId</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Owner_Gmail_Address__c</fullName>
        <formula>Owner:User.Gmail__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Gmail Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Patient_Email__c</fullName>
        <label>Patient Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Patient_Full_Name__c</fullName>
        <label>Patient Full Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Specialization__c</fullName>
        <label>Specialization</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sync_Status__c</fullName>
        <formula>if(GoogleEventId__c &lt;&gt; null, &apos;Synced&apos;, &apos;Not Synced&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sync Status</label>
        <type>Text</type>
    </fields>
</CustomObject>